change landing css for consistency

--- a/index.css
+++ b/index.css
@@ -1,8 +1,11 @@
 body {
-    font-size:2.8em;
+    font-size:2.0em;
+    background-color: #222;
+    color: #e6e6e6;
+    border-color: #e6e6e6;
 }
 
 .content {
-    max-width: 800px;
+    max-width: 900px;
     margin: auto;
 }
