change coloring of report text

--- a/report/books/reports.css
+++ b/report/books/reports.css
@@ -1,7 +1,7 @@
 body {
     font-size:1.2em;
     background-color: #222;
-    color: #e6e6e6;
+    color: lightslategrey;
     border-color: #e6e6e6;
 }
 
