--- a/landing.css
+++ b/landing.css
@@ -1,11 +1,162 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
 body {
-    font-size:2.4em;
-    background-color: #222;
-    color: #e6e6e6;
-    border-color: #e6e6e6;
+    background: #222;
+    font-family: 'Raleway', sans-serif;
 }
 
-.content {
-    max-width: 900px;
-    margin: auto;
+
+/* Heading */
+
+h1 {
+    font-size: 1.5em;
+    text-align: center;
+    padding: 70px 0 0 0;
+    color: #EF8354;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+span {
+    border: 2px solid #4F5D75;
+    padding: 10px;
+}
+
+
+/* Layout Styling */
+
+#container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 0 150px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+/* Button Styles */
+
+.button {
+    display: inline-flex;
+    height: 40px;
+    width: 150px;
+    border: 2px solid #BFC0C0;
+    margin: 20px 20px 20px 20px;
+    color: #BFC0C0;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: .8em;
+    letter-spacing: 1.5px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+a {
+    color: #BFC0C0;
+    text-decoration: none;
+    letter-spacing: 1px;
+}
+
+/* Button 1 */
+
+#button-1 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#button-1 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+
+#slide1 {
+    width: 100%;
+    height: 100%;
+    left: -200px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+
+#button-1:hover #slide1 {
+    left: 0;
+}
+
+#button-1:hover a {
+    color: #2D3142;
+}
+
+/* Button 2 */
+
+#button-2 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#button-2 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+
+#slide2 {
+    width: 100%;
+    height: 100%;
+    left: -200px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+
+#button-2:hover #slide2 {
+    left: 0;
+}
+
+#button-2:hover a {
+    color: #2D3142;
+}
+
+/* Button 3 */
+
+#button-3 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#button-3 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+
+#slide3 {
+    width: 100%;
+    height: 100%;
+    left: -200px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+
+#button-3:hover #slide3 {
+    left: 0;
+}
+
+#button-3:hover a {
+    color: #2D3142;
+}
+
+@media screen and (min-width:1000px) {
+    h1 {
+        font-size: 2.2em;
+    }
+    #container {
+        width: 50%;
+    }
 }
