--- a/landing.css
+++ b/landing.css
@@ -29,7 +29,7 @@ span {
     margin: 0 auto;
     padding: 50px 0 150px 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -39,14 +39,14 @@ span {
 
 .button {
     display: inline-flex;
-    height: 40px;
-    width: 150px;
+    height: 60px;
+    width: 300px;
     border: 2px solid #BFC0C0;
     margin: 20px 20px 20px 20px;
     color: #BFC0C0;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: .8em;
+    font-size: 1.4em;
     letter-spacing: 1.5px;
     align-items: center;
     justify-content: center;
@@ -60,94 +60,79 @@ a {
 }
 
 /* Button 1 */
-
 #button-1 {
     position: relative;
     overflow: hidden;
     cursor: pointer;
 }
-
 #button-1 a {
     position: relative;
     transition: all .35s ease-Out;
 }
-
 #slide1 {
     width: 100%;
     height: 100%;
-    left: -200px;
+    left: -300px;
     background: #BFC0C0;
     position: absolute;
     transition: all .35s ease-Out;
     bottom: 0;
 }
-
 #button-1:hover #slide1 {
     left: 0;
 }
-
 #button-1:hover a {
     color: #2D3142;
 }
 
 /* Button 2 */
-
 #button-2 {
     position: relative;
     overflow: hidden;
     cursor: pointer;
 }
-
 #button-2 a {
     position: relative;
     transition: all .35s ease-Out;
 }
-
 #slide2 {
     width: 100%;
     height: 100%;
-    left: -200px;
+    left: -300px;
     background: #BFC0C0;
     position: absolute;
     transition: all .35s ease-Out;
     bottom: 0;
 }
-
 #button-2:hover #slide2 {
     left: 0;
 }
-
 #button-2:hover a {
     color: #2D3142;
 }
 
 /* Button 3 */
-
 #button-3 {
     position: relative;
     overflow: hidden;
     cursor: pointer;
 }
-
 #button-3 a {
     position: relative;
     transition: all .35s ease-Out;
 }
-
 #slide3 {
     width: 100%;
     height: 100%;
-    left: -200px;
+    left: -300px;
     background: #BFC0C0;
     position: absolute;
     transition: all .35s ease-Out;
     bottom: 0;
 }
-
 #button-3:hover #slide3 {
     left: 0;
 }
-
 #button-3:hover a {
     color: #2D3142;
 }
