--- a/landing.css
+++ b/landing.css
@@ -4,9 +4,7 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-
 /* Heading */
-
 h1 {
     font-size: 1.5em;
     text-align: center;
@@ -15,28 +13,23 @@ h1 {
     font-weight: 300;
     letter-spacing: 1px;
 }
-
 span {
     border: 2px solid #4F5D75;
     padding: 10px;
 }
 
-
 /* Layout Styling */
-
 #container {
     width: 100%;
     margin: 0 auto;
     padding: 50px 0 150px 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-
 /* Button Styles */
-
 .button {
     display: inline-flex;
     height: 60px;
