--- a/report/books/index.css
+++ b/report/books/index.css
@@ -7,6 +7,7 @@ body {
 .title {
     font-size: 2.2em;
     text-align: center;
+    padding: 30px 0 0 0;
     color: #EF8354;
     font-weight: 300;
     letter-spacing: 1px;
