--- a/landing.css
+++ b/landing.css
@@ -8,7 +8,6 @@ body {
 h1 {
     font-size: 1.5em;
     text-align: center;
-    padding: 70px 0 0 0;
     color: #EF8354;
     font-weight: 300;
     letter-spacing: 1px;
@@ -19,7 +18,16 @@ span {
 }
 
 /* Layout Styling */
-#container {
+#container1 {
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 0 50px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#container2 {
     width: 100%;
     margin: 0 auto;
     padding: 50px 0 150px 0;
