book and media report content update Wed 11/03/2021

--- a/report/books/reports.css
+++ b/report/books/reports.css
@@ -8,3 +8,12 @@ body {
 .content {
     margin: auto;
 }
+
+label {
+    padding-right: 10px;
+    font-size: 1.2rem;
+}
+
+progress {
+    -webkit-appearance: none;
+}
