--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-size:2.0em;
-    background-color: #222;
+    background-color: black;
     color: #e6e6e6;
     border-color: #e6e6e6;
 }
