book and media report content update Wed 03/23/2022

--- a/landing.css
+++ b/landing.css
@@ -21,7 +21,14 @@ span {
 #container1 {
     width: 100%;
     margin: 0 auto;
-    padding: 50px 0 50px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#container2 {
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -126,6 +133,32 @@ a {
     left: 0;
 }
 #button-3:hover a {
+    color: #2D3142;
+}
+
+/* Button 4 */
+#button-4 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+#button-4 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+#slide4 {
+    width: 100%;
+    height: 100%;
+    left: -300px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+#button-4:hover #slide4 {
+    left: 0;
+}
+#button-4:hover a {
     color: #2D3142;
 }
 
