--- a/report/books/bookimages.css
+++ b/report/books/bookimages.css
@@ -28,7 +28,25 @@ span {
 }
 
 #container1 {
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#container2 {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#container3{
+    width: 80%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
