rearrange images by year page

--- a/report/books/bookimages.css
+++ b/report/books/bookimages.css
@@ -54,6 +54,33 @@ span {
     justify-content: center;
 }
 
+#container4{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#container5{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#container6{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .button {
     display: inline-flex;
     height: 60px;
