--- a/landing.css
+++ b/landing.css
@@ -42,6 +42,14 @@ span {
     flex-wrap: wrap;
     justify-content: center;
 }
+#container4 {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
 /* Button Styles */
 .button {
@@ -219,6 +227,58 @@ a {
     left: 0;
 }
 #button-6:hover a {
+    color: #2D3142;
+}
+
+/* Button 6 */
+#button-7 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+#button-7 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+#slide7 {
+    width: 100%;
+    height: 100%;
+    left: -300px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+#button-7:hover #slide7 {
+    left: 0;
+}
+#button-7:hover a {
+    color: #2D3142;
+}
+
+/* Button 8 */
+#button-8 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+#button-8 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+#slide8 {
+    width: 100%;
+    height: 100%;
+    left: -300px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+#button-8:hover #slide8 {
+    left: 0;
+}
+#button-8:hover a {
     color: #2D3142;
 }
 
