book and media report content update Mon 08/14/2023

--- a/landing.css
+++ b/landing.css
@@ -58,6 +58,14 @@ span {
     flex-wrap: wrap;
     justify-content: center;
 }
+#container6 {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
 /* Button Styles */
 .button {
@@ -313,6 +321,84 @@ a {
     left: 0;
 }
 #button-9:hover a {
+    color: #2D3142;
+}
+
+/* Button 10 */
+#button-10 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+#button-10 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+#slide10 {
+    width: 100%;
+    height: 100%;
+    left: -300px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+#button-10:hover #slide10 {
+    left: 0;
+}
+#button-10:hover a {
+    color: #2D3142;
+}
+
+/* Button 11 */
+#button-11 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+#button-11 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+#slide11 {
+    width: 100%;
+    height: 100%;
+    left: -300px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+#button-11:hover #slide11 {
+    left: 0;
+}
+#button-11:hover a {
+    color: #2D3142;
+}
+
+/* Button 12 */
+#button-12 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+#button-12 a {
+    position: relative;
+    transition: all .35s ease-Out;
+}
+#slide12 {
+    width: 100%;
+    height: 100%;
+    left: -300px;
+    background: #BFC0C0;
+    position: absolute;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+#button-12:hover #slide9 {
+    left: 0;
+}
+#button-12:hover a {
     color: #2D3142;
 }
 
