--- a/report/books/bookimages.css
+++ b/report/books/bookimages.css
@@ -1,22 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
+
 body {
     background: #222;
     font-family: 'Raleway', sans-serif;
 }
 
-.title {
-    font-size: 2.2em;
-    text-align: center;
-    padding: 30px 0 0 0;
-    color: #EF8354;
-    font-weight: 300;
-    letter-spacing: 1px;
-}
-
+/* Heading */
 h1 {
     font-size: 1.5em;
     text-align: center;
-    padding: 70px 0 0 0;
     color: #EF8354;
     font-weight: 300;
     letter-spacing: 1px;
@@ -27,70 +19,27 @@ span {
     padding: 10px;
 }
 
-#container1 {
-    width: 80%;
+/* Layout Styling */
+[id^="container"] {
+    width: 100%;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-#container2 {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#container3{
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#container4{
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#container5{
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#container6{
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
+/* Button Styles */
 .button {
     display: inline-flex;
     height: 60px;
     width: 300px;
     border: 2px solid #BFC0C0;
-    margin: 20px 20px 20px 20px;
+    margin: 20px;
     color: #BFC0C0;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 2.0em;
+    font-size: 1.4em;
     letter-spacing: 1.5px;
     align-items: center;
     justify-content: center;
@@ -103,17 +52,19 @@ a {
     letter-spacing: 1px;
 }
 
-/* Button 2013 */
-#button-2013 {
+/* Button Animation */
+[id^="button-"] {
     position: relative;
     overflow: hidden;
     cursor: pointer;
 }
-#button-2013 a {
+
+[id^="button-"] a {
     position: relative;
     transition: all .35s ease-Out;
 }
-#slide2013 {
+
+[id^="slide"] {
     width: 100%;
     height: 100%;
     left: -300px;
@@ -122,330 +73,22 @@ a {
     transition: all .35s ease-Out;
     bottom: 0;
 }
-#button-2013:hover #slide2013 {
+
+[id^="button-"]:hover [id^="slide"] {
     left: 0;
 }
-#button-2013:hover a {
+
+[id^="button-"]:hover a {
     color: #2D3142;
 }
 
-/* Button 2014 */
-#button-2014 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2014 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2014 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2014:hover #slide2014 {
-    left: 0;
-}
-#button-2014:hover a {
-    color: #2D3142;
-}
-
-/* Button 2015 */
-#button-2015 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2015 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2015 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2015:hover #slide2015 {
-    left: 0;
-}
-#button-2015:hover a {
-    color: #2D3142;
-}
-
-/* Button 2016 */
-#button-2016 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2016 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2016 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2016:hover #slide2016 {
-    left: 0;
-}
-#button-2016:hover a {
-    color: #2D3142;
-}
-
-/* Button 2017 */
-#button-2017 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2017 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2017 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2017:hover #slide2017 {
-    left: 0;
-}
-#button-2017:hover a {
-    color: #2D3142;
-}
-
-/* Button 2018 */
-#button-2018 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2018 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2018 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2018:hover #slide2018 {
-    left: 0;
-}
-#button-2018:hover a {
-    color: #2D3142;
-}
-
-/* Button 2019 */
-#button-2019 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2019 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2019 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2019:hover #slide2019 {
-    left: 0;
-}
-#button-2019:hover a {
-    color: #2D3142;
-}
-
-/* Button 2020 */
-#button-2020 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2020 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2020 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2020:hover #slide2020 {
-    left: 0;
-}
-#button-2020:hover a {
-    color: #2D3142;
-}
-
-/* Button 2021 */
-#button-2021 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2021 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2021 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2021:hover #slide2021 {
-    left: 0;
-}
-#button-2021:hover a {
-    color: #2D3142;
-}
-
-/* Button 2022 */
-#button-2022 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2022 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2022 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2022:hover #slide2022 {
-    left: 0;
-}
-#button-2022:hover a {
-    color: #2D3142;
-}
-
-/* Button 2023 */
-#button-2023 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2023 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2023 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2023:hover #slide2023 {
-    left: 0;
-}
-#button-2023:hover a {
-    color: #2D3142;
-}
-
-/* Button 2024 */
-#button-2024 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2024 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2024 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2024:hover #slide2024 {
-    left: 0;
-}
-#button-2024:hover a {
-    color: #2D3142;
-}
-
-/* Button 2025 */
-#button-2025 {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-#button-2025 a {
-    position: relative;
-    transition: all .35s ease-Out;
-}
-#slide2025 {
-    width: 100%;
-    height: 100%;
-    left: -300px;
-    background: #BFC0C0;
-    position: absolute;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
-#button-2025:hover #slide2025 {
-    left: 0;
-}
-#button-2025:hover a {
-    color: #2D3142;
-}
-
-@media screen and (min-width:1000px) {
+/* Media Query */
+@media screen and (min-width: 1000px) {
     h1 {
         font-size: 2.2em;
     }
-    #container {
+
+    [id^="container"] {
         width: 50%;
     }
 }
