--- a/avatar/index.css
+++ b/avatar/index.css
@@ -18,3 +18,12 @@ body {
     max-width: 1000px;
     margin: auto;
 }
+
+.title {
+    font-size: 2.2em;
+    text-align: center;
+    padding: 30px 0 0 0;
+    color: #EF8354;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
