adjust report css

--- a/report/books/reports.css
+++ b/report/books/reports.css
@@ -1,5 +1,5 @@
 body {
-    font-size:1.5vw;
+    font-size:1.2em;
     background-color: #222;
     color: lightslategrey;
     border-color: #e6e6e6;
