--- a/report/books/years/bookimages.css
+++ b/report/books/years/bookimages.css
@@ -14,6 +14,15 @@ h1 {
     letter-spacing: 1px;
 }
 
+.title {
+    font-size: 2.2em;
+    text-align: center;
+    padding: 30px 0 0 0;
+    color: #EF8354;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
 span {
     border: 2px solid #4F5D75;
     padding: 10px;
