--- a/report/books/index.css
+++ b/report/books/index.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
 
 body {
     background: #222;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Helvetica', sans-serif;
 }
 
 .title {
