--- a/report/books/years/bookimages.css
+++ b/report/books/years/bookimages.css
@@ -101,3 +101,11 @@ a {
         width: 50%;
     }
 }
+
+.content {
+    text-align: center;
+    margin: auto;
+}
+img {
+    vertical-align: middle;
+}
